--- a/src/Busybee/SecurityBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/Busybee/SecurityBundle/Resources/config/doctrine/User.orm.yml
@@ -112,6 +112,7 @@ Busybee\SecurityBundle\Entity\User:
         directroles:
             targetEntity: Busybee\SecurityBundle\Entity\Role
             nullable: true 
+            cascade: [persist]
             joinTable:
                 name: secure_users_to_roles
                 joinColumns:
