--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -2,7 +2,7 @@ imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
     - { resource: services.yml }
-
+    - { resource: doctrine.yml }
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
@@ -43,7 +43,7 @@ twig:
     strict_variables: "%kernel.debug%"
     form_themes:
         - bootstrap_3_layout.html.twig
-        - BusybeeFormBundle:Template:bootstrap.html.twig 
+        - 'BusybeeFormBundle:Template:bootstrap.html.twig'
 #        - bootstrap_3_horizontal_layout.html.twig 
 # Assetic Configuration
 assetic:
@@ -56,38 +56,6 @@ assetic:
         #closure:
         #    jar: "%kernel.root_dir%/Resources/java/compiler.jar" 
         
-# Doctrine Configuration
-doctrine:
-    dbal:
-        default_connection: normal
-        connections:
-            normal: 
-                driver:    pdo_mysql
-                host:      "%database_host%"
-                port:      "%database_port%"
-                dbname:    "%database_name%"
-                user:      "%database_user%"
-                password:  "%database_password%"
-                charset:   utf8mb4
-                default_table_options:
-                    charset: utf8mb4
-                    collate: utf8mb4_unicode_ci 
-                mapping_types:
-                    enum: string 
-        # if using pdo_sqlite as your database driver:
-        #   1. add the path in parameters.yml
-        #     e.g. database_path: "%kernel.root_dir%/data/data.db3"
-        #   2. Uncomment database_path in parameters.yml.dist
-        #   3. Uncomment next line:
-        #     path:     "%database_path%"
-
-    orm:
-        auto_generate_proxy_classes: "%kernel.debug%"
-        entity_managers:
-            default:
-                connection: normal
-                auto_mapping: true 
-
 
 # Swiftmailer Configuration
 swiftmailer:
