--- a/src/Busybee/CampusBundle/Resources/config/services.yml
+++ b/src/Busybee/CampusBundle/Resources/config/services.yml
@@ -12,3 +12,7 @@ services:
             - '@setting.manager'
         tags: 
             - { name: form.type }    
+    institute.name.validator:
+        class: Busybee\CampusBundle\Validator\Constraints\InstituteNameValidator
+        tags:
+            - { name: validator.constraint_validator, alias: institute_name_validator }
