--- a/src/Busybee/SystemBundle/Resources/config/menu/parameters.yml
+++ b/src/Busybee/SystemBundle/Resources/config/menu/parameters.yml
@@ -15,20 +15,8 @@ parameters:
             node: 1
             order: 19
             menu: 19
-        11:
-            name: Update
-            label: menu.site.update
-            role: ROLE_ADMIN
-            node: 1
-            route: update_start
-            order: 11
-            test:
-                value1: test.update.available
-                value2: true
-                comparitor: ==
-                default1: false
         12:
-            name: Manage Setting
+            name: Manage System Settings
             label: menu.site.setting.manage
             role: ROLE_REGISTRAR
             node: 1
@@ -44,14 +32,14 @@ parameters:
                 'id': '0'
             order: 100
         191:
-            name: Register User:
+            name: Register User
             label: menu.site.security.register
             grant: ROLE_REGISTRAR
             route: busybee_security_user_register
             node: 19
             order: 101
         192:
-            name: Current User:
+            name: Current User
             label: menu.site.security.user
             grant: ROLE_REGISTRAR
             route: busybee_security_user_list
@@ -71,3 +59,15 @@ parameters:
             node: 12
             route: setting_upload
             order: 120
+        122:
+            name: Update
+            label: menu.site.update
+            role: ROLE_ADMIN
+            node: 12
+            route: update_start
+            order: 122
+            test:
+                value1: test.update.available
+                value2: true
+                comparitor: ==
+                default1: false
