--- a/src/Busybee/InstituteBundle/Resources/config/calendar/parameters.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/calendar/parameters.yml
@@ -4,4 +4,8 @@ parameters:
         year:
             label: calendar.tab.year
             include: 'BusybeeInstituteBundle:Calendar:year.html.twig'    
-            message: calendarMessage
+            message: yearMessage
+        terms:
+            label: calendar.tab.terms
+            include: 'BusybeeInstituteBundle:Calendar:terms.html.twig'    
+            message: termMessage
