--- a/src/Busybee/InstituteBundle/Resources/config/routing.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/routing.yml
@@ -7,3 +7,6 @@ calendar_years:
 year_edit:
     path:     /year/{id}/edit/
     defaults: { _controller: BusybeeInstituteBundle:Calendar:editYear }
+year_delete:
+    path:     /year/{id}/delete/
+    defaults: { _controller: BusybeeInstituteBundle:Calendar:deleteYear }
