--- a/src/Busybee/InstituteBundle/Resources/config/doctrine/Term.orm.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/doctrine/Term.orm.yml
@@ -56,3 +56,8 @@ Busybee\InstituteBundle\Entity\Term:
             joinColumn:
                 name: year_id
                 referencedColumnName: id
+    oneToMany:
+        specialDays:
+            targetEntity: Busybee\InstituteBundle\Entity\SpecialDay
+            mappedBy: term
+            cascade: [persist, remove]
