--- a/src/Busybee/InstituteBundle/Resources/config/services.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/services.yml
@@ -81,3 +81,5 @@ services:
             - 'getRepository' 
         arguments: 
             - "BusybeeInstituteBundle:SpecialDay"
+    calendar.widget:
+        class: Busybee\InstituteBundle\Service\WidgetService
