--- a/src/Busybee/InstituteBundle/Resources/config/routing.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/routing.yml
@@ -4,6 +4,9 @@ campus_manage:
 calendar_years:
     path:     /years/
     defaults: { _controller: BusybeeInstituteBundle:Calendar:years }
+year_calendar:
+    path:     /year/{id}/calendar/
+    defaults: { _controller: BusybeeInstituteBundle:Calendar:calendar }
 year_edit:
     path:     /year/{id}/edit/
     defaults: { _controller: BusybeeInstituteBundle:Calendar:editYear }
