--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -79,3 +79,10 @@ monolog:
             type:  stream
             path:  '%kernel.logs_dir%/%kernel.environment%_doctrine.log'
             channels: ['doctrine']
+ensepar_html2pdf:
+    orientation: P
+    format: A4
+    lang: en
+    unicode: true
+    encoding: UTF-8
+    margin: [10,15,10,15]
