--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "symfony/console": "^3.0",
         "imsky/holder": "2.9.*",
         "vsn4ik/bootstrap-submenu": "2.0.*",
-        "twig/extensions": "^1.4"
+        "twig/extensions": "^1.4",
+        "ensepar/html2pdf-bundle": "^2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
