--- a/src/Busybee/InstituteBundle/Resources/config/routing.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/routing.yml
@@ -10,6 +10,9 @@ year_calendar:
 year_edit:
     path:     /year/{id}/edit/
     defaults: { _controller: BusybeeInstituteBundle:Calendar:editYear }
+calendar_print:
+    path:     /year/{id}/print/
+    defaults: { _controller: BusybeeInstituteBundle:Calendar:printCalendar }
 year_delete:
     path:     /year/{id}/delete/
     defaults: { _controller: BusybeeInstituteBundle:Calendar:deleteYear }
@@ -19,3 +22,6 @@ term_delete:
 specialday_delete:
     path:     /special_day/{id}/{year}/delete/
     defaults: { _controller: BusybeeInstituteBundle:Calendar:deleteSpecialDay }
+year_calendar_change:
+    path:     /year/calendar/
+    defaults: { _controller: BusybeeInstituteBundle:Calendar:calendarChange }
