--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -39,3 +39,4 @@ parameters:
         mixedCase: 1
         specials: 0
     upload_path: '../web/uploads/%current_year%/%current_month%'
+    timezone: UTC
