--- a/src/Busybee/InstituteBundle/Resources/config/menu/parameters.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/menu/parameters.yml
@@ -43,3 +43,17 @@ parameters:
             node: 141
             order: 1411
             route: year_calendar_change
+        142:
+            label: menu.groups.manage
+            name: Group Management
+            node: 14
+            order: 142
+            menu: 142
+        1420:
+            label: menu.groups.year.manage
+            name: Year Groups
+            role: ROLE_REGISTRAR
+            node: 142
+            order: 1420
+            route: groups_years
+
