--- a/src/Busybee/InstituteBundle/Resources/config/menu/parameters.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/menu/parameters.yml
@@ -64,4 +64,11 @@ parameters:
             node: 142
             order: 1420
             route: groups_years
+        1421:
+            label: menu.groups.homerooms
+            name: Home Rooms
+            role: ROLE_REGISTRAR
+            node: 142
+            order: 1421
+            route: home_room_manage
 
